<resources>
    <string name="app_name">Minesweeper</string>
    <string name="restart">Restart</string>
    <string name="restart_button">Restart button</string>
    <string name="set_flag_button" />
    <string name="lol">LOL</string>
    <string name="flag_mode_toggle">Flag mode toggle</string>
    <string name="reset_button">Reset button</string>
    <string name="chronometerShadowText">88:88</string>
    <string name="choose_number_of_fields_in_a_row">Choose number of fields in a row:</string>
    <string name="decrease_number_of_fields">Decrease number of fields</string>
    <string name="play">Play</string>
    <string name="increase_mines_saturation">Increase mines saturation</string>
    <string name="mines_saturation">Mines saturation</string>
    <string name="decrease_mines_saturation">Decrease mines saturation</string>
    <string name="choose_mines_saturation">Choose mines saturation:</string>
    <string name="increase_number_of_fields">Increase number of fields</string>
    <string name="number_of_fields">Number of fields</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="custom">Custom</string>
    <string name="please_choose_the_level">Please choose the level:</string>
    <string name="username">New user\'s name</string>
    <string name="hello_and_welcome_to_minesweeper">Hello and welcome to minesweeper!</string>
    <string name="sign_in_or_sign_up">Sign in or sign up</string>
    <string name="play_anonymously">Play as guest</string>
    <string name="show_ranking">Show ranking</string>
    <string name="ranking">Ranking</string>
    <string name="Hard">Hard</string>
    <string name="Medium">Medium</string>
    <string name="Easy">Easy</string>
    <string name="add">Add</string>
    <string name="delete_account">Delete account</string>
    <string name="Play">Play</string>
    <string name="game_won_toast">"You won! Congratulations!"</string>
    <string name="game_lost_toast"> "You lost. Let's try again!"</string>
</resources>