<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RankingActivity"
    tools:ignore="ExtraText">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ranking"
        app:layout_constraintBottom_toTopOf="@+id/users_scroll"
        app:layout_constraintEnd_toStartOf="@id/radio_group"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textStyle="bold"
        android:textSize="36sp"
        android:gravity="center_vertical"/>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toTopOf="@+id/users_scroll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <RadioButton
            android:id="@+id/b1"
            android:checked="true"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/Hard" />

        <RadioButton
            android:id="@+id/b2"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/Medium" />

        <RadioButton
            android:id="@+id/b3"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/Easy" />

    </RadioGroup>

    <ScrollView
        android:id="@+id/users_scroll"
        android:layout_width="409dp"
        android:layout_height="550dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:isScrollContainer="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TableLayout
            android:id="@+id/layout_ranking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="0dp"
            android:paddingBottom="10dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

        </TableLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>