<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".UserActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/navigationBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#C0C0C0"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/boardView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#C0C0C0"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/navigationBar"
            app:layout_constraintVertical_bias="1.0">

            <TextView
                android:id="@+id/simpleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#000"
                android:padding="10dp"
                android:text="@string/hello_and_welcome_to_minesweeper"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="30sp" />

            <Button
                android:id="@+id/sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="15dp"
                android:width="300dp"
                android:height="110dp"
                android:backgroundTint="#800080"
                android:onClick="sign_up_activity"
                android:text="@string/sign_in_or_sign_up"
                android:textSize="30sp" />

            <Button
                android:id="@+id/play_anonymously"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#800080"
                android:width="300dp"
                android:height="110dp"
                android:onClick="play_anonymously_activity"
                android:text="@string/play_anonymously"
                android:textSize="30sp"
                android:layout_margin="15dp"
                android:layout_gravity="center_horizontal" />

            <Button
                android:id="@+id/show_ranking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#800080"
                android:width="300dp"
                android:height="110dp"
                android:onClick="show_ranking_activity"
                android:text="@string/show_ranking"
                android:textSize="30sp"
                android:layout_margin="15dp"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>