<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".LevelActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/navigationBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#C0C0C0"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/boardView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#C0C0C0"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/navigationBar"
            app:layout_constraintVertical_bias="1.0">

            <TextView
                android:id="@+id/simpleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/rounded_corners_purple"
                android:padding="10dp"
                android:text="@string/hello_and_welcome_to_minesweeper_please_choose_the_level"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="30sp" />

            <Button
                android:id="@+id/easy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="200dp"
                android:height="70dp"
                android:text="@string/easy"
                android:textSize="30sp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="15dp"
                android:layout_gravity="center_horizontal" />


            <Button
                android:id="@+id/medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="200dp"
                android:height="70dp"
                android:text="@string/medium"
                android:textSize="30sp"
                android:layout_margin="15dp"
                android:layout_gravity="center_horizontal" />

            <Button
                android:id="@+id/hard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="200dp"
                android:height="70dp"
                android:text="@string/hard"
                android:textSize="30sp"
                android:layout_margin="15dp"
                android:layout_gravity="center_horizontal" />

            <Button
                android:id="@+id/custom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="200dp"
                android:height="70dp"
                android:text="@string/custom"
                android:textSize="30sp"
                android:layout_margin="15dp"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>